--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,10 @@
 </header>
 
 <style>
+  .site-header {
+    border-top: none;
+  }
+
   .site-title {
     font-size: 22px;
     font-weight: bold;
