--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,35 @@
 <footer class="site-footer h-card">
-    <data class="u-url" href="{{ "/" | relative_url }}"></data>
-  
-    <div class="wrapper">
-  
-      <div class="footer-col-wrapper">
-        <div class="footer-col footer-col-3">
-          {%- include social.html -%}
-        </div>
-        <div class="footer-col footer-col-4">
-          Open to opportunities, email me at: <a href="mailto:vincent@vwong.dev">vincent@vwong.dev</a>
-        </div>
+  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+
+  <div class="wrapper">
+
+    <h2 class="footer-heading">{{ site.title | escape }}</h2>
+
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-1" style="width: calc(30% - (30px / 2));">
+        <ul class="contact-list">
+          <li class="p-name">
+            {%- if site.author -%}
+              {{ site.author | escape }}
+            {%- else -%}
+              {{ site.title | escape }}
+            {%- endif -%}
+            </li>
+            {%- if site.email -%}
+            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            {%- endif -%}
+        </ul>
       </div>
-  
+
+      <div class="footer-col footer-col-2" style="width: calc(25% - (30px / 2));">
+        {%- include social.html -%}
+      </div>
+
+      <div class="footer-col footer-col-3">
+        <p>{{- site.description | escape -}}</p>
+      </div>
     </div>
-  
-  </footer>
+
+  </div>
+
+</footer>
