--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
       <div class="trigger">
         <a class="page-link" href="{{ "/" | relative_url }}">About</a>
         <a class="page-link" href="{{ "/projects" | relative_url }}">Projects</a>
-        <a class="page-link" href="{{ "/university-notes" | relative_url }}">University Notes</a>
+        <a class="page-link" href="{{ "/notes" | relative_url }}">Study Notes</a>
       </div>
     </nav>
   </div>
